# lib-toggl

./: .envrc  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  pyproject.toml  readme.md  update_uv_deps.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci-cd.yaml  release-drafter.yaml  release-publish-pypi.yaml
docs/adr/: adr01 - use Pydantic instead of dataclass.md
lib_toggl/: __init__.py  account.py  client.py  const.py  organization.py  tags.py  time_entries.py  workspace.py
lib_toggl/util/: tags.py
scripts/: .gitignore  get_tags.py  poc.py  readme.md
tests/: readme.md  test_client.py  test_time_entry.py  test_version.py
