[project]
authors = [{ name = "Karl Quinsalnd" }]
requires-python = "<4.0,>=3.13"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.11.11",
    "certifi>=2024.12.14",
    "pydantic>=2.10.4",
    "pyrfc3339>=2.0.1",
]
name = "lib-toggl"
description = "Asynchronous Python library for the Toggl API."
readme = "README.md"
# For $reasons that are hard to wrap my head around, there is still no good way to do this across
#   most python ecosystem tools.
# This is the "official" hack that's endorsed by the UV team.
# See: https://github.com/astral-sh/uv/issues/8714#issuecomment-2449005264
version = "0.0.0"


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"


[dependency-groups]
dev = [
    "aioresponses>=0.7.7",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
