[project]
authors = [{ name = "Karl Quinsalnd" }]
requires-python = "<4.0,>=3.13"
dependencies = [
  "certifi>=2023.11.17,<2026.0.0",
  "pydantic<3.0.0,>=1.10.2",
  "pyrfc3339<3.0,>=1.1",
  "aiohttp<4.0.0,>=3.9.1",
  "aiodns<4.0.0,>=3.1.1",
]
name = "lib-toggl"
description = "Asynchronous Python library for the Toggl API."
readme = "README.md"
# For $reasons that are hard to wrap my head around, there is still no good way to do this across
#   most python ecosystem tools.
# This is the "official" hack that's endorsed by the UV team.
# See: https://github.com/astral-sh/uv/issues/8714#issuecomment-2449005264
version = "0.0.0"


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"


[dependency-groups]
dev = [
  "pytest-asyncio>=0.24.0",
  "aioresponses>=0.7.7",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "ruff>=0.7.4",
  "pre-commit<5.0.0,>=4.0.1",
  "pytest-asyncio>=0.23.2,<2.0.0",
  "structlog<25.0.0,>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
