[project]
authors = [{ name = "Karl Quinsalnd" }]
requires-python = "<4.0,>=3.13"
dependencies = [
  "certifi>=2026.1.4,<2026.2.0",
  "pydantic<3.0.0,>=2.12.5",
  "pyrfc3339<3.0,>=2.1.0",
  "aiohttp<4.0.0,>=3.13.3",
  "aiodns<4.1.0,>=4.0.0",
]
name = "lib-toggl"
description = "Asynchronous Python library for the Toggl API."
readme = "README.md"
# For $reasons that are hard to wrap my head around, there is still no good way to do this across
#   most python ecosystem tools.
# This is the "official" hack that's endorsed by the UV team.
# See: https://github.com/astral-sh/uv/issues/8714#issuecomment-2449005264
version = "0.0.0"


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"


[dependency-groups]
dev = [
  "pytest-asyncio>=1.3.0",
  "aioresponses>=0.7.8",
  "pytest>=9.0.2",
  "ruff>=0.15.0",
  "pytest-asyncio<1.4.0,>=1.3.0",
  "structlog<25.6.0,>=25.5.0",
  "pre-commit>=4.5.1",
  "ty>=0.0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
